--- a/404.html
+++ b/404.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=/Nik_Renew/" />
+    <meta http-equiv="refresh" content="0; url=/Nik_Renew/" />
   </head>
-  <body></body>
+  <body>
+    Redirecting...
+  </body>
 </html>
