--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; URL=/Nik_Renew/" />
-  </head>
-  <body></body>
+
+<head>
+  <meta http-equiv="refresh" content="0; URL=/" />
+</head>
+
+<body></body>
+
 </html>
